[#1233] Fixed group picture overlapping group name

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -3468,6 +3468,7 @@ button.no-style:focus {
 .group-image-wrapper-medium {
 	width: 130px;
 	height: 130px;
+	margin: auto;
 }
 
 .group-image-small {
